--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ env_logger = "0.6.0"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+
+[features]
+enable_log = []
+
+[profile.release]
+debug = true
