--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde = "1"
 serde_json = "1"
 serde_derive = "1"
 criterion = "0.2.5"
+ndarray = "*"
+optimize = "*"
 
 [features]
 enable_log = []
@@ -22,6 +24,9 @@ dump_result = []
 dump_stats = []
 enable_render = []
 use_test_strategy = []
+
+[profile.release]
+debug = true
 
 [[bench]]
 name = "simulator"
