--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2018"
 
 [lib]
 name = "my_strategy"
-version = "1.0.0"
 edition = "2018"
 
 [dependencies]
@@ -15,12 +14,18 @@ serde = "1"
 serde_json = "1"
 serde_derive = "1"
 criterion = "0.2.5"
+optimize = "0.1.0"
+ndarray = "0.11.2"
 
 [features]
-enable_log = []
 enable_stats = []
+enable_log = []
 enable_render = []
+enable_verbose_log = []
 use_test_strategy = []
+
+[profile.release]
+debug = true
 
 [[bench]]
 name = "simulator"
