Rename feature dump_stats -> enable_stats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ criterion = "0.2.5"
 [features]
 enable_log = []
 dump_result = []
-dump_stats = []
+enable_stats = []
 enable_render = []
 use_test_strategy = []
 
