--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ enable_log = []
 enable_stats = []
 enable_render = []
 enable_time = []
+enable_profiler = []
 use_test_strategy = []
 use_limited_forward = []
 use_single_goalkeeper = []
