--- a/etc/config.json
+++ b/etc/config.json
@@ -14,5 +14,6 @@
   "ball_goal_direction_score_weight": 0.1,
   "my_time_to_ball_score_weight": 0.5,
   "time_to_goal_score_weight": 0.25,
-  "opponent_time_to_ball_penalty_weight": 0.1
+  "opponent_time_to_ball_penalty_weight": 0.1,
+  "nitro_amount_score_weight": 0.1
 }
