Add goalkeeper max z factor to config

--- a/etc/config.json
+++ b/etc/config.json
@@ -15,5 +15,6 @@
   "my_time_to_ball_score_weight": 0.5000113249625928,
   "time_to_goal_score_weight": 0.24999619213943386,
   "opponent_time_to_ball_penalty_weight": 0.09999078428632137,
-  "nitro_amount_score_weight": 0.10000021192195667
+  "nitro_amount_score_weight": 0.10000021192195667,
+  "goalkeeper_max_z_factor":1.6666666666666667
 }
