Replace goalkeeper and forward test strategies by features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,7 @@ enable_stats = []
 enable_render = []
 enable_time = []
 use_test_strategy = []
-use_goalkeeper_strategy = []
-use_forward_strategy = []
+use_limited_forward = []
 use_single_goalkeeper = []
 disable_output = []
 read_config = []
